# timedeltafmt

./: .gitignore  LICENSE  Pipfile  README.md  readme_example.py  setup.cfg
tests/: test_timedeltafmt.py
timedeltafmt/: __init__.py
