[metadata]
name = timedeltafmt
version = 0.1.0
author = Aaron Tsang
description = Parse and format timedelta
url = https://github.com/tsangwpx/timedeltafmt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Text Processing

[options]
packages = find:
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    adelie = adelie.cli.__main__:main
