[metadata]
name = timedeltafmt
version = 0.1.1
author = Aaron Tsang
description = Parse and format timedelta
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tsangwpx/timedeltafmt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Text Processing

[options]
packages = find:
